Refactor rental service